<resources>
    <string name="app_name">ReservationApplication</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="app_name_about_comp_text">Frisor barbershop соединил в себе старинные традиции с технологиями, кинематографическое освещение для качественной геометрии в стрижках, классические техники с искусством скульптуры мужской стрижки, только так можно раскрыть и создать индивидуальный, уверенный образ. Наша мужская парикмахерская — первая, кто осмелилась нарушить все стереотипы, мы симбиоз Барберов, скульпторов и классиков, стремящихся к совершенству. Еженедельно проводим встречи и мастер-классы в Киеве и Украине, делимся секретами и тонкостями правильного бритья в домашних условиях опасной бритвой, ритуалах королевского бритья. Практические советы об уходе за бородой и усами, и правильной укладке волос, подбору правильной стрижки по форме лица. Мы хотим помочь настоящим мужчинам быть еще более независимыми и уверенными в себе. Frisor Барбершоп — мужской клуб в котором вы не только станете лучше, но и будете вооружены опытом наших предков. Frisor — имеет главную особенность, это первый Барбершоп в Киеве и Украине, открытый мастерами. Киев — сердце страны и место, где берет свое начало история империи парикмахерских Frisor. Именно в одном из подвалов начала зарождаться особая культура независимых брадобреев, которая с каждым днем расширяет свои границы. Прекрасное тому подтверждение — первая школа барберов в Украине, где все больше новых людей могут отдать дань старинному искусству мужской стрижки.</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in_short">sign in short</string>
    <string name="action_sign_in">sign in</string>
    <string name="tv_online_reservation">Online reservation</string>
    <string name="tv_info_name_and_address_of_organization">BarberShop, Kyiv, Ukraine</string>
    <string name="tv_info_phone_number_of_organization">+380971112223</string>


    <string name="tv_time_10_00">10:00</string>
    <string name="tv_time_10_30">10:30</string>
    <string name="tv_time_11_00">11:00</string>
    <string name="tv_time_11_30">11:30</string>

    <string name="tv_time_12_00">12:00</string>
    <string name="tv_time_12_30">12:30</string>
    <string name="tv_time_13_00">13:00</string>
    <string name="tv_time_13_30">13:30</string>
    <string name="tv_time_14_00">14:00</string>
    <string name="tv_time_14_30">14:30</string>
    <string name="tv_time_15_00">15:00</string>
    <string name="tv_time_15_30">15:30</string>

    <string name="tv_time_16_00">16:00</string>
    <string name="tv_time_16_30">16:30</string>
    <string name="tv_time_17_00">17:00</string>
    <string name="tv_time_17_30">17:30</string>

</resources>
